add responsive design css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/media.css" />
     <link rel="stylesheet" href="/css/ionicons.min.css" />
     <title>Omnifood</title>
   </head>
@@ -377,7 +378,7 @@
           <div class="two">
             <textarea name="" id="line" placeholder="Youe message"></textarea>
           </div>
-          <div class="one">
+          <div class="one" id="null">
             &nbsp;
           </div>
           <div class="two">
