--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/media.css" />
-    <link rel="stylesheet" href="/css/ionicons.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/ionicons.min.css" />
     <title>Omnifood</title>
   </head>
   <body>
