image root path changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="main-header">
       <nav class="row navi">
         <div class="logo">
-          <img src="/img/logo-white.png" alt="logo" />
+          <img src="img/logo-white.png" alt="logo" />
         </div>
         <div class="main-nav">
           <ul>
@@ -86,35 +86,35 @@
     </section>
     <section class="section-meals">
       <figure>
-        <img src="/img/1.jpg" alt="" />
+        <img src="img/1.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/2.jpg" alt="" />
+        <img src="img/2.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/3.jpg" alt="" />
+        <img src="img/3.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/4.jpg" alt="" />
+        <img src="img/4.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/5.jpg" alt="" />
+        <img src="img/5.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/6.jpg" alt="" />
+        <img src="img/6.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/7.jpg" alt="" />
+        <img src="img/7.jpg" alt="" />
       </figure>
       <figure>
-        <img src="/img/8.jpg" alt="" />
+        <img src="img/8.jpg" alt="" />
       </figure>
     </section>
     <section class="section-steps">
       <h2>HOW IT WORKS — SIMPLE AS 1, 2, 3</h2>
       <div class="container-step row">
         <div class="step-img">
-          <img src="/img/app-iPhone.png" alt="" />
+          <img src="img/app-iPhone.png" alt="" />
         </div>
         <div class="cont-step">
           <div class="steps">
@@ -138,8 +138,8 @@
             </p>
           </div>
           <div class="app">
-            <a href="#"><img src="/img/download-app-android.png" alt="" /></a>
-            <a href="#"><img src="/img/download-app.svg" alt="" /></a>
+            <a href="#"><img src="img/download-app-android.png" alt="" /></a>
+            <a href="#"><img src="img/download-app.svg" alt="" /></a>
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
       <h2>WE'RE CURRENTLY IN THESE CITIES</h2>
       <div class="row cont-city">
         <div class="city">
-          <img src="/img/lisbon-3.jpg" alt="lisbon-3" />
+          <img src="img/lisbon-3.jpg" alt="lisbon-3" />
           <h3>LISBON</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -165,7 +165,7 @@
           </div>
         </div>
         <div class="city">
-          <img src="/img/san-francisco.jpg" alt="lisbon-3" />
+          <img src="img/san-francisco.jpg" alt="lisbon-3" />
           <h3>SAN FRANCISCO</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div class="city">
-          <img src="/img/berlin.jpg" alt="lisbon-3" />
+          <img src="img/berlin.jpg" alt="lisbon-3" />
           <h3>BERLIN</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -197,7 +197,7 @@
           </div>
         </div>
         <div class="city">
-          <img src="/img/london.jpg" alt="lisbon-3" />
+          <img src="img/london.jpg" alt="lisbon-3" />
           <h3>LONDON</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -224,7 +224,7 @@
               me with no time for cooking, so Omnifood is a life-saver. Now that
               I got used to it, I couldn't live without my daily meals!
               <cite>
-                Alberto Duncan<img src="/img/customer-1.jpg" alt="customer-1"
+                Alberto Duncan<img src="img/customer-1.jpg" alt="customer-1"
               /></cite>
             </blockquote>
           </div>
@@ -234,7 +234,7 @@
               my home. We have lots of food delivery here in Lisbon, but no one
               comes even close to Omifood. Me and my family are so in love!
               <cite
-                >Joana Silva<img src="/img/customer-2.jpg" alt="customer-1"
+                >Joana Silva<img src="img/customer-2.jpg" alt="customer-1"
               /></cite>
             </blockquote>
           </div>
@@ -244,7 +244,7 @@
               Franciso. I tried a lot of them and ended up with Omnifood. Best
               food delivery service in the Bay Area. Keep up the great work!
               <cite
-                >Milton Chapman<img src="/img/customer-3.jpg" alt="customer-1"
+                >Milton Chapman<img src="img/customer-3.jpg" alt="customer-1"
               /></cite>
             </blockquote>
           </div>
@@ -378,9 +378,7 @@
           <div class="two">
             <textarea name="" id="line" placeholder="Youe message"></textarea>
           </div>
-          <div class="one" id="null">
-            &nbsp;
-          </div>
+          <div class="one" id="null">&nbsp;</div>
           <div class="two">
             <input type="submit" value="Send it!" class="btn" />
           </div>
@@ -388,33 +386,41 @@
       </div>
     </section>
     <footer>
-        <div class="row">
-            <div class="cont-navi">
-                <div class="foot-nav">
-                    <ul>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Press</a></li>
-                        <li><a href="#">iOS App</a></li>
-                        <li><a href="#">Android App</a></li>
-                    </ul>
-                </div>
-                <div class="social-nav">
-                    <ul class="social-links">
-                        <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                        <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                        <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                        <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <p>
-                Build with <i class="ion-ios-heart" style="color: #ea0000; padding: 0 3px;"></i> by Piyush Banugariya.
-            </p>
-            <p>
-                Copyright &copy; 2020 by Omnifood. All right reserved.
-            </p>
+      <div class="row">
+        <div class="cont-navi">
+          <div class="foot-nav">
+            <ul>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">iOS App</a></li>
+              <li><a href="#">Android App</a></li>
+            </ul>
+          </div>
+          <div class="social-nav">
+            <ul class="social-links">
+              <li>
+                <a href="#"><i class="ion-social-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="ion-social-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="ion-social-googleplus"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="ion-social-instagram"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
+        <p>
+          Build with
+          <i class="ion-ios-heart" style="color: #ea0000; padding: 0 3px"></i>
+          by Piyush Banugariya.
+        </p>
+        <p>Copyright &copy; 2020 by Omnifood. All right reserved.</p>
+      </div>
     </footer>
   </body>
 </html>
