--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="main-nav">
           <ul>
-            <li><a href="#">FOOD DELIVERY </a></li>
-            <li><a href="#">HOW IT WORKS</a></li>
-            <li><a href="#">OUR CITIES</a></li>
-            <li><a href="#">SIGN UP</a></li>
+            <li><a href="#fooddel">FOOD DELIVERY </a></li>
+            <li><a href="#how">HOW IT WORKS</a></li>
+            <li><a href="#city">OUR CITIES</a></li>
+            <li><a href="#plan">SIGN UP</a></li>
           </ul>
         </div>
       </nav>
@@ -36,7 +36,7 @@
         <a href="#" class="btn btn-2">Show me more</a>
       </div>
     </header>
-    <section class="section-features">
+    <section class="section-features" id="fooddel">
       <div class="row out-sec">
         <h2>GET FOOD FAST — NOT FAST FOOD</h2>
         <p>
@@ -110,7 +110,7 @@
         <img src="img/8.jpg" alt="" />
       </figure>
     </section>
-    <section class="section-steps">
+    <section class="section-steps" id="how">
       <h2>HOW IT WORKS — SIMPLE AS 1, 2, 3</h2>
       <div class="container-step row">
         <div class="step-img">
@@ -145,7 +145,7 @@
       </div>
     </section>
 
-    <section class="section-city">
+    <section class="section-city" id="city">
       <h2>WE'RE CURRENTLY IN THESE CITIES</h2>
       <div class="row cont-city">
         <div class="city">
@@ -251,7 +251,7 @@
         </div>
       </div>
     </section>
-    <section class="section-plan">
+    <section class="section-plan" id="plan">
       <h2>START EATING HEALTHY TODAY</h2>
       <div class="row plans">
         <div class="plan">
